# template-back-special-boladion

./: .gitignore  .pdm-python  .pylintrc  Dockerfile  Procfile  README.md  bdae8854-3a71-4b80-bb18-0aebaf38d4f7-ImageProfilePic_object_1  docker-compose.yml  envsample  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: entrypoint.sh
.docker/rabbitmq/: definitions.json
.docker/zsh/history/: .zsh_history
.githooks/: post-checkout
src/: db.sqlite3
src/core/: pytest_plugin.py
src/core/__seedwork__/domain/: exceptions.py
src/core/__seedwork__/domain/filter/: matching_ids.py  normalizer.py  search_class.py
src/core/__seedwork__/domain/utils/: matching_ids.py
src/core/__seedwork__/infra/django_app/: basefilter.py  filters.py  models.py
src/core/company/domain/: value_objects.py
src/core/company/infra/company_django_app/: admin.py  apps.py  filters.py  models.py  router.py  serializers.py  signals.py  views.py
src/core/company/infra/company_django_app/migrations/: 0001_initial.py  0002_initial.py  0002_rename_company_id_employee_company_and_more.py  0003_alter_company_id_alter_employee_id_and_more.py  0003_alter_employee_user.py  0003_alter_employee_user_packing.py  0003_company_document_alter_employee_user.py  0004_alter_company_document.py  0004_alter_packing_id.py  0004_company_created_at_company_deleted_at_and_more.py  0004_remove_company_pic_company_avatar.py  0005_employee_created_at_employee_deleted_at_and_more.py  0005_remove_company_document_company_document.py  0006_rename_document_company_documents.py
src/core/company/infra/django_app/: apps.py  models.py  router.py  serializers.py  views.py
src/core/company/infra/django_app/migrations/: 0001_initial.py  0002_alter_company_id.py  0002_employee.py  0002_initial.py  0003_company_pic.py  0003_company_system_admin_alter_company_id_and_more.py  0004_alter_company_id.py
src/core/company/tests/e2e/company/: test_e2e_create.py  test_e2e_get.py  test_e2e_patch.py  test_e2e_retrieve.py
src/core/company/tests/e2e/contract/: test_e2e_create.py  (+3 more)
src/core/image/domain/: generate_user_pic.py
src/core/image/infra/image_django_app/: admin.py  apps.py  models.py  router.py  serializers.py  views.py
src/core/order/domain/: value_objects.py
src/core/order/infra/order_django_app/: admin.py  apps.py  filters.py  models.py  router.py  serializers.py  signals.py  views.py
src/core/parking/domain/: value_objects.py
src/core/parking/infra/parking_django_app/: admin.py  apps.py  models.py  router.py  serializers.py  signals.py  views.py
src/core/populate/infra/resources/: data_company.py  data_contracts.py  data_measurement_unit.py  data_order.py  data_packing.py  data_parking.py  data_product.py  data_purchase_sale_order.py  data_service.py  data_transport_contracts.py  data_user.py  data_vehicle.py
src/core/product/infra/product_django_app/: admin.py  apps.py  filters.py  models.py  router.py  serializers.py  views.py
src/core/service/infra/service_django_app/: admin.py  apps.py  models.py  router.py  serializers.py  views.py
src/core/uploader/: admin.py  router.py  views.py
src/core/uploader/domain/: files.py  generate_avatar.py  value_objects.py
src/core/uploader/helpers/: files.py  value_objects.py
src/core/uploader/infra/uploader_django_app/: admin.py  apps.py  models.py  router.py  serializers.py  views.py
src/core/uploader/migrations/: 0001_initial.py  0002_document_type.py
src/core/uploader/models/: document.py
src/core/uploader/serializers/: __init__.py  document.py
src/core/user/domain/: value_objects.py
src/core/user/domain/actions/: __init__.py  forget_password.py  reset_password.py  validate_token.py
src/core/user/domain/tasks/: send_forget_password_email.py
src/core/user/infra/user_django_app/: admin.py  apps.py  filters.py  models.py  router.py  serializers.py  signals.py  views.py
src/core/user/tests/integration/: test_int_models.py
src/core/vehicle/domain/: value_objects.py
src/core/vehicle/infra/vehicle_django_app/: admin.py  apps.py  models.py  router.py  serializers.py  views.py
src/django_project/: celery.py  middleware.py  pagination.py  renderers.py  router.py  schema_class.py  settings.py  urls.py
src/emails/: send_forget_password_email_template.html
(+166 files in other folders)
